# OMOptim

./: .gitignore  CMakeLists.txt  COPYING  Makefile.in  Makefile.omdev.mingw  ParadisEO-2.0.1.txt  README.md  configure.ac
OMOptim/: CMakeLists.txt  README  buildOMOptim.pro  config.h  main.cpp  revision.h  scriptparseromoptim.cpp  scriptparseromoptim.h  version.h
OMOptim/Core/: ExeModel.cpp  ExeModel.h  MOClasses.h  MOItem.cpp  MOItem.h  MOKeepVector.h  MOOptVector.cpp  MOOptVector.h  MOSettings.cpp  MOSettings.h  MOTableView.cpp  MOTableView.h  MOThreads.cpp  MOThreads.h  MOVector.h  ModExePlus.cpp  ModExePlus.h  ModPlusBlackBoxExeCtrl.cpp  ModPlusBlackBoxExeCtrl.h  ModPlusDymolaExeCtrl.cpp  ModPlusDymolaExeCtrl.h  ModPlusExeCtrl.cpp  ModPlusExeCtrl.h  ModelPlus.cpp  ModelPlus.h  OMOptimSettings.cpp  OMOptimSettings.h  OptObjective.cpp  OptObjective.h  OptObjectives.cpp  OptObjectives.h  ParetoDominance.cpp  ParetoDominance.h  PlugInterface.h  Project.cpp  Project.h  Software.h  Variable.cpp  Variable.h  VariableType.h  (+4 more)
OMOptim/Core/CERES/: CERES.qrc  CERESInfo.mo
OMOptim/Core/Dymola/: Dymola.cpp  Dymola.h  DymolaParameters.h  ModPlusDymolaCtrl.cpp  ModPlusDymolaCtrl.h
OMOptim/Core/EI/: CERESInfo.cpp  CERESInfo.h  EIConn.cpp  EIConn.h  EIConnConstr.cpp  EIConnConstr.h  EIConnConstrs.cpp  EIConnConstrs.h  EIConns.cpp  EIConns.h  EIControler.cpp  EIControler.h  EIGroup.cpp  EIGroup.h  EIGroupFact.cpp  EIGroupFact.h  EIHEN.cpp  EIHEN.h  EIHEN1Functions.cpp  EIHEN1Functions.h  EIHEN1Parameters.h  EIHEN1Result.cpp  EIHEN1Result.h  EIHENNodes.cpp  EIHENNodes.h  EIItem.cpp  EIItem.h  EILinguist.h  EIMERParameters.h  EIMERResult.cpp  EIMERResult.h  EIModelContainer.cpp  EIModelContainer.h  EIModelExtractor.cpp  EIModelExtractor.h  EIModelicaExtractor.cpp  EIModelicaExtractor.h  EIModelicaHE.cpp  EIModelicaHE.h  EIModelicaModifier.cpp  (+22 more)
OMOptim/Core/FileData/: CSV.cpp  CSV.h  Load.cpp  Load.h  LoadOMOptim.cpp  LoadOMOptim.h  Save.cpp  Save.h  SaveOMOptim.cpp  SaveOMOptim.h  XML.cpp  XML.h
OMOptim/Core/Infos/: Info.cpp  Info.h  InfoSender.cpp  InfoSender.h  ListInfo.h
OMOptim/Core/Modelica/: MOParameter.cpp  MOParameter.h  ModClass.cpp  ModClass.h  ModClassTree.cpp  ModClassTree.h  ModComponent.cpp  ModComponent.h  ModExecution.cpp  ModExecution.h  ModItem.cpp  ModItem.h  ModItemsTree.cpp  ModItemsTree.h  ModLoader.cpp  ModLoader.h  ModModel.cpp  ModModel.h  ModModelParameter.cpp  ModModelParameter.h  ModModelPlus.cpp  ModModelPlus.h  ModPackage.cpp  ModPackage.h  ModPlusCtrl.cpp  ModPlusCtrl.h  ModPlusCtrls.cpp  ModPlusCtrls.h  ModReader.cpp  ModReader.h  ModRecord.cpp  ModRecord.h  Modelica.h  ModelicaConnection.cpp  ModelicaConnection.h  ModelicaConnections.cpp  ModelicaConnections.h  ModelicaHENImplementer.cpp  ModelicaHENImplementer.h  ModelicaModifier.cpp  (+2 more)
OMOptim/Core/OMC/: ComponentInfo.cpp  ComponentInfo.h  MOomc.cpp  MOomc.h  OMCHelper.cpp  OMCHelper.h  OMCThreads.cpp  OMCThreads.h  StringHandler.cpp  StringHandler.h  commandcompletion.cpp  commandcompletion.h  commandunit.h  inputcelldelegate.h  omc_communication.cpp  omc_communication.h  omc_communicator.cpp  omc_communicator.h  omcinteractiveenvironment.cpp  omcinteractiveenvironment.h
OMOptim/Core/OpenModelica/: ModPlusOMCtrl.cpp  ModPlusOMCtrl.h  OpenModelica.cpp  OpenModelica.h  OpenModelicaParameters.h
OMOptim/Core/Problems/: EIHEN1.cpp  EIHEN1.h  EIHEN1Problem.cpp  EIHEN1Problem.h  EIMER.cpp  EIMER.h  EIMERProblem.cpp  EIMERProblem.h  EIProblem.cpp  EIProblem.h  EITarget.cpp  EITarget.h  OMCase.cpp  OMCase.h  OMCases.cpp  OMCases.h  OneSimResult.cpp  OneSimResult.h  OneSimulation.cpp  OneSimulation.h  (+24 more)
OMOptim/Doc/: AddANewProblem.txt  ClassStructure.graphml  CodeStructureOMOptim.graphml  Develop.rtf  Doxyfile  Folders.xmind  HowProblemWorks.pptx  MainClasses.graphml  MainPage.txt  Models.txt  OMOptimDeveloperDocumentation.docx  OMOptimDoc.txt  Project.txt  ReadMe.docx
OMOptim/GUI/: MainWindow.cpp  MainWindow.h  MainWindow.ui
OMOptim/OMOptimBasis/: MOClasses.h  MOItem.cpp  MOItem.h  MOKeepVector.h  MOOptVector.cpp  MOOptVector.h  MOParameter.cpp  MOParameter.h  MOSettings.cpp  MOSettings.h  MOTableView.cpp  MOTableView.h  MOThreads.cpp  MOThreads.h  MOVector.cpp  MOVector.h  MOVectors.h  ProjectBase.cpp  ProjectBase.h  Variable.cpp  Variable.h  Variables.cpp  Variables.h  registermetatypes.h
OMOptim/Vld/: vld.h  vldapi.h
OMOptim/tools/: hqt.rules
OMOptimBasis/: CMakeLists.txt  MOItem.cpp  MOItem.h  MOItemModel.cpp  MOItemModel.h  MOOptVector.cpp  MOOptVector.h  MOParameter.cpp  MOParameter.h  MOSettings.cpp  MOSettings.h  MOThreads.cpp  MOThreads.h  MOVector.cpp  MOVector.h  MOVectors.h  ProjectBase.cpp  ProjectBase.h  Variable.cpp  Variable.h  VariableType.h  Variables.cpp  Variables.h  registermetatypes.cpp  registermetatypes.h  scriptparser.cpp  scriptparser.h
OMOptimBasis/FileData/: CSVBase.cpp  CSVBase.h  Load.cpp  Load.h  Save.cpp  Save.h  XML.cpp  XML.h
OMOptimBasis/GUI/: ConsoleWindow.cpp  ConsoleWindow.h  ConsoleWindow.ui  MOItemViews.cpp  MOItemViews.h  MOTableView.cpp  MOTableView.h
OMOptimBasis/Infos/: Info.cpp  Info.h  InfoSender.cpp  InfoSender.h  ListInfo.h
OMOptimBasis/Problems/: OMCase.cpp  OMCase.h  OMCases.cpp  OMCases.h  Problem.cpp  Problem.h  ProblemConfig.cpp  ProblemConfig.h  ProblemInterface.cpp  ProblemInterface.h  ProblemInterfaces.cpp  ProblemInterfaces.h  Problems.cpp  Problems.h  Result.cpp  Result.h  Results.cpp  Results.h
OMOptimBasis/Tools/: HighTools.cpp  HighTools.h  LowTools.cpp  LowTools.h  OMProcess.cpp  OMProcess.h  SleeperThread.h  XMLTools.cpp  XMLTools.h
OMOptimBasis/Units/: MEDimValue.cpp  MEDimValue.h  MEGeneric.cpp  MEGeneric.h  MEHTCoeff.cpp  MEHTCoeff.h  MEMassFlow.cpp  MEMassFlow.h  MEQflow.cpp  MEQflow.h  MERefValue.cpp  MERefValue.h  MESpecHeatCapacity.cpp  MESpecHeatCapacity.h  MESurface.cpp  MESurface.h  METemperature.cpp  METemperature.h  METime.cpp  METime.h  Units.h
OMOptimBasis/doc/: AddANewOptimAlgo.txt  AddANewProblem.txt  Doxyfile  Extension.txt  OMOptimBasisDoc.txt  ProblemInterface.txt  ProblemsDoc.txt  ProjectBase.txt
(+624 files in other folders)
